[package]
name = "recursive-future-leak"
version = "0.1.0"
authors = ["Johannes Tax <jtax@newrelic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = [ "full" ] }
